--- a/source/stylesheets/small/_tags.sass
+++ b/source/stylesheets/small/_tags.sass
@@ -7,6 +7,19 @@ body
 #male:checked ~ #svg-circle
   fill: grey
 
+#female:checked:root
+  border: 10px solid red
 
   body &
     background-color: blue
+
+input[value='asdf']
+  background-color: red
+
+#svg-circle:target
+  background-color: red
+
+.dumdium
+  height: 100px
+  width: 100px
+  background-color: red
