--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,3 +1,48 @@
+$pink: #ff5aa4
+$pink-light: #ffebf8
+
+$grey-light: #e6e6e6
+
+
+// body
+$body-salmon-dark: #ffd0cd
+$body-salmon: #ffdedc
+$body-salmon-light: #feeceb
+
+$body-misty-rose-dark: #f0a2a2
+$body-misty-rose: #f1b5b5
+$body-misty-rose-light: #f0caca
+
+
+// beak
+$beak-brown: #423316
+$beak-brown-light: #564729
+
+$beak-rosy-brown: #8c7676
+$beak-rosy-brown-light: #a59595
+
+$beak-grey: #c2b6b6
+$beak-grey-light: #d5cece 
+
+$beak-khaki: #8d8555
+$beak-khaki-light: #a29a6a
+
+// leggs
+$leggs-beige: #f1e1e1
+$leggs-beige-light: #fceded
+
+$leggs-salmon: #f9c8b8
+$leggs-salmon-light: #fadad0
+
+$leggs-grey: #736d71
+$leggs-gery-light: #959194
+
+$leggs-blue: #254167
+$leggs-blue-light: #3b5a83
+
+
+
+
 @import small/tags
 @import small/filter
 @import small/flamingo_icon
