--- a/source/stylesheets/small/_filter.sass
+++ b/source/stylesheets/small/_filter.sass
@@ -10,62 +10,47 @@
   display: none
   border-radius: 1000px 1000px
   color: transparent
-  width: 50px
-  height: 50px
+  width: 25px
+  height: 25px
   background-color: black
   margin: 5px 2px 
   border: 3px solid transparent
   box-sizing: border-box
   cursor: pointer
 
-  &[for="blue"]
-    background-color: blue
-  &[for="red"]
-    background-color: red
-  &[for="orange"]
-    background-color: orange
-  &[for="green"]
-    background-color: green
+  &[for="body-salmon"]
+    background-color: $body-salmon
+  &[for="body-misty-rose"]
+    background-color: $body-misty-rose
+  &[for="beak-brown"]
+    background-color: $beak-brown
+  &[for="beak-rosy-brown"]
+    background-color: $beak-rosy-brown
+  &[for="leggs-beige"]
+    background-color: $leggs-beige
+  &[for="leggs-salmon"]
+    background-color: $leggs-salmon
 
 #body-color:target
   ~ .filter
     .filter-label-body-color
       display: inline-block
     .fitler-body-color
-      border-color: black
+      border-color: $pink
 
 #beak-color:target
   ~ .filter
     .filter-label-beak-color
       display: inline-block
     .filter-beak-color
-      border-color: black
+      border-color: $pink
 
-#legg-color:target
+#leggs-color:target
   ~ .filter
-    .filter-label-legg-color
+    .filter-label-leggs-color
       display: inline-block
-    .filter-legg-color
-      border-color: black
-
-#blue:checked
-  ~ #flamingo
-    .st3
-      fill: blue
-  ~ .filter
-    .filter-second-level
-      label[for="blue"]
-        border-color: black
-  
-// linker fuss: st0
-// rechter fuss: st1
-// body mittel hell: st2
-// body dunkel : st3
-// body hell : st4
-// weiss : st5
-// schnabel schwarz hell: st6
-// schnabel weiss dunkel: st7
-// schnabel schwarz dunkel: st7
+    .filter-leggs-color
+      border-color: $pink
 
 .filter-first-level 
   bottom: 0
@@ -73,12 +58,50 @@
   white-space: nowrap
   width: 100%
   overflow: scroll
+  padding: 0 10px
   a
     display: inline-block
 
 .filter-first-level-option
-  border-bottom: 3px solid grey
+  border-bottom: 3px solid $grey-light
 
 .filter-second-level 
-  background-color: pink
+  background-color: $pink-light
   width: 100%
+  padding: 0px 10px
+
+#body-salmon:checked
+  ~ .filter
+    .filter-second-level
+      label[for="body-salmon"]
+        border-color: $pink
+
+#body-misty-rose:checked
+  ~ .filter
+    .filter-second-level
+      label[for="body-misty-rose"]
+        border-color: $pink
+
+#beak-brown:checked
+  ~ .filter
+    .filter-second-level
+      label[for="beak-brown"]
+        border-color: $pink
+
+#beak-rosy-brown:checked
+  ~ .filter
+    .filter-second-level
+      label[for="beak-rosy-brown"]
+        border-color: $pink
+
+#leggs-beige:checked
+  ~ .filter
+    .filter-second-level
+      label[for="leggs-beige"]
+        border-color: $pink
+
+#leggs-salmon:checked
+  ~ .filter
+    .filter-second-level
+      label[for="leggs-salmon"]
+        border-color: $pink
