--- a/source/stylesheets/small/_flamingo_icon.sass
+++ b/source/stylesheets/small/_flamingo_icon.sass
@@ -1,9 +1,9 @@
 .flamingo-icon
-  height: 50px
-  width: 50px
+  height: 60px
+  width: 60px
   display: block
   text-align: center
-  padding: 5px
+  padding: 10px 10px 5px 10px
 
 #flamingo-icon-svg
   height: 100%
@@ -24,7 +24,7 @@
   .sti0
     fill-opacity: 0
 
-.flamingo-icon-legg-color
+.flamingo-icon-leggs-color
   .sti0
     fill-opcaity: 0
     fill: #000
