--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -5,13 +5,13 @@ $grey-light: #e6e6e6
 
 
 // body
-$body-salmon-dark: #ffd0cd
-$body-salmon: #ffdedc
-$body-salmon-light: #feeceb
-
-$body-misty-rose-dark: #f0a2a2
-$body-misty-rose: #f1b5b5
-$body-misty-rose-light: #f0caca
+//$body-salmon-dark: #ffd0cd
+//$body-salmon: #ffdedc
+//$body-salmon-light: #feeceb
+//
+//$body-misty-rose-dark: #f0a2a2
+//$body-misty-rose: #f1b5b5
+//$body-misty-rose-light: #f0caca
 
 
 // beak
@@ -43,6 +43,7 @@ $leggs-blue-light: #3b5a83
 
 
 
+@import small/colors
 @import small/tags
 @import small/filter
 @import small/flamingo_icon
