--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,5 @@
 ---
-title: Welcome to Middleman
+title: Not all flamingos are pink
 ---
 
 //%input.filter-input#body-salmon{ name: 'body-color', type: 'radio', value: 'body-salmon' }
@@ -43,7 +43,9 @@ title: Welcome to Middleman
 
 #flamingo
   = svg('flamingo')
-<a href="http://www.freepik.com/free-vector/pack-of-tropical-birds_867951.htm">Designed by Freepik</a>
+  %a.a{ href: 'http://www.freepik.com/free-vector/pack-of-tropical-birds_867951.htm' }
+    Designed by Freepik
+
 
 
 //%br
