--- a/source/stylesheets/small/_tags.sass
+++ b/source/stylesheets/small/_tags.sass
@@ -1,6 +1,10 @@
 body
   background-color: white
-  margin: 0
+  margin: 5px
+  border: 30px solid $grey-dark
+  height: 97vh
+  box-sizing: border-box
+
 
 #svg-circle 
   fill: orange
@@ -24,3 +28,7 @@ input[value='asdf']
   height: 100px
   width: 100px
   background-color: red
+
+.a
+  font-size: 11px
+  color: $pink
