--- a/source/stylesheets/small/_flamingo_icon.sass
+++ b/source/stylesheets/small/_flamingo_icon.sass
@@ -4,6 +4,7 @@
   padding: 10px 10px 8px 10px
   position: relative
   background-color: white
+
   &:after
     content: ' '
     width: 20px
@@ -16,7 +17,7 @@
     background-color: $pink
     display: none
 
-#flamingo-icon-svg
+.flamingo-icon-svg
   height: 100%
 
 .flamingo-icon-body-color
@@ -44,7 +45,6 @@
   .sti2
     fill-opacity: 0
 
-// sti0 = beine
+// sti0 = leggs
 // sti2 = beak
 // sti3 = body
-
