--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -45,4 +45,4 @@ title: Not all flamingos are pink
 %a.link-freepik{ href: 'http://www.freepik.com/free-vector/pack-of-tropical-birds_867951.htm', title: 'Go to the page which designed the flamingo' }
   Flamingo by Freepik
 
-%a.link-start{ href: '/', title: 'Go back to the start' } Start
+%a.link-start{ href: 'https://ryabrody.github.io/flamingo', title: 'Go back to the start' } Start
