--- a/source/stylesheets/small/_flamingo_icon.sass
+++ b/source/stylesheets/small/_flamingo_icon.sass
@@ -13,6 +13,7 @@
     background-color: red
     position: absolute
     left: 7vh 
+    bottom: -10px 
     transform: rotate(45deg)
     background-color: $pink
     display: none
