add further colors for flamingo

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,5 @@
 ---
-title: Not all flamingos are pink
+title: <3 Not all flamingos are pink
 ---
 - sass_variable('small/_colors', 'body-colors').each do |body_color|
   %input.filter-input{ id: body_color.key, title: "Change feather color to #{body_color}", name: 'body-color', type: 'radio', value: body_color.key }
